test/files/neg/constant-warning.check
constant-warning.scala:4: warning: Evaluation of a constant expression results in an arithmetic error: / by zero
  val fails = 1 + 2 / (3 - 2 - 1)
                    ^
constant-warning.scala:6: warning: Evaluation of a constant expression results in an arithmetic error: integer overflow, using -2147483607
  val addi: Int = Int.MaxValue + 42
                               ^
constant-warning.scala:7: warning: Evaluation of a constant expression results in an arithmetic error: integer overflow, using 2147483606
  val subi: Int = Int.MinValue - 42
                               ^
constant-warning.scala:8: warning: Evaluation of a constant expression results in an arithmetic error: integer overflow, using -2
  val muli: Int = Int.MaxValue * 2
                               ^
constant-warning.scala:9: warning: Evaluation of a constant expression results in an arithmetic error: integer overflow, using -2147483648
  val divi: Int = Int.MinValue / -1
                               ^
constant-warning.scala:10: warning: Evaluation of a constant expression results in an arithmetic error: / by zero
  val divz: Int = Int.MinValue / 0
                               ^
constant-warning.scala:12: warning: Evaluation of a constant expression results in an arithmetic error: integer overflow, using 0
  val long: Long = 100 * 1024 * 1024 * 1024
                                     ^
constant-warning.scala:13: warning: Evaluation of a constant expression results in an arithmetic error: long overflow, using -9223372036854775767
  val addl: Long = Long.MaxValue + 42
                                 ^
constant-warning.scala:14: warning: Evaluation of a constant expression results in an arithmetic error: long overflow, using 9223372036854775766
  val subl: Long = Long.MinValue - 42
                                 ^
constant-warning.scala:15: warning: Evaluation of a constant expression results in an arithmetic error: long overflow, using -2
  val mull: Long = Long.MaxValue * 2
                                 ^
constant-warning.scala:16: warning: Evaluation of a constant expression results in an arithmetic error: long overflow, using -9223372036854775808
  val divl: Long = Long.MinValue / -1
                                 ^
constant-warning.scala:17: warning: Evaluation of a constant expression results in an arithmetic error: / by zero
  val divlz: Long = Long.MinValue / 0
                                  ^
error: No warnings can be incurred under -Werror.
12 warnings
1 error
